The following have been implemented * Current weather and forecast layouts * API calls to newsapiwrapper and weatherapi. * caching to aid offline view

--- a/WeatherAppXam/WeatherAppXam/AppShell.xaml
+++ b/WeatherAppXam/WeatherAppXam/AppShell.xaml
@@ -32,7 +32,7 @@
 
     <TabBar>
         <ShellContent Title="Home" Icon="icon_home.png" Route="HomePage" ContentTemplate="{DataTemplate local:HomePage}" />
-        <ShellContent Title="Search" Icon="icon_search.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
+        <ShellContent Title="Search" Icon="icon_search.png" Route="SearchPage" ContentTemplate="{DataTemplate local:SearchPage}" />
         <ShellContent Title="News" Icon="icon_news.png" Route="NewsPage" ContentTemplate="{DataTemplate local:NewsPage}" />
 
         <!--<ShellContent Title="About" Icon="icon_about2.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
