--- a/WeatherAppXam/WeatherAppXam/Views/NewsPage.xaml
+++ b/WeatherAppXam/WeatherAppXam/Views/NewsPage.xaml
@@ -5,10 +5,10 @@
              Shell.NavBarIsVisible="False">
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#0E3752" Padding="15,25,15,10">
+            <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource BgTextWhite}" Padding="15,25,15,10">
 
                 <StackLayout Margin="10,0">
-                <Frame Padding="0" BackgroundColor="{StaticResource BgTextLightGray}" BorderColor="{StaticResource BgTextBlue}" CornerRadius="10" HasShadow="False">
+                <Frame Padding="0" BackgroundColor="{StaticResource BgTextWhite}" BorderColor="{StaticResource BgTextBlue}" CornerRadius="10" HasShadow="False">
                     <StackLayout Padding="10,15,0,15" Orientation="Horizontal">
                         <!--<Image Source="icon_location" HeightRequest="25" WidthRequest="25" HorizontalOptions="Start" />-->
                         <Label Text="Recent News" FontSize="15" FontAttributes="Bold" TextColor="{StaticResource BgTextBlue}"
@@ -32,7 +32,7 @@
                                         <CollectionView.ItemTemplate>
                                             <DataTemplate>
                                                 <StackLayout Margin="0,10,0,20" BackgroundColor="Transparent">
-                                                    <Frame CornerRadius="5" BackgroundColor="{StaticResource BgTextLightGray}" Padding="5" Margin="0"  HasShadow="True">
+                                                    <Frame CornerRadius="5" BackgroundColor="{StaticResource BgTextWhite}" Padding="5" Margin="0"  HasShadow="False">
                                                     
                                                     <Grid Padding="3"  VerticalOptions="Start" ColumnSpacing="0" RowSpacing="0">
                                                         <Grid.RowDefinitions>
@@ -63,8 +63,8 @@
                                                             <Label Text="{Binding Source}" FontAttributes="None" FontSize="14" HorizontalTextAlignment="Center" 
                                                                 Padding="0" Margin="0,10,0,5" TextColor="{StaticResource BgTextBlue}" Grid.Row="5" Grid.ColumnSpan="3"/>
 
-                                                            <!--<BoxView HorizontalOptions="FillAndExpand" HeightRequest="0" WidthRequest="1" Color="{StaticResource BgTextLightBlue}" 
-                                                            Grid.Row="5" Grid.ColumnSpan="3" Margin="0,20,0,10"/>-->
+                                                            <BoxView HorizontalOptions="FillAndExpand" HeightRequest="0" WidthRequest="1" Color="{StaticResource BgTextBlue}" 
+                                                            Grid.Row="6" Grid.ColumnSpan="3" Margin="0,20,0,10"/>
                                                     </Grid>
                                                    
                                                 </Frame>
