--- a/WeatherAppXam/WeatherAppXam/Views/NewsPage.xaml
+++ b/WeatherAppXam/WeatherAppXam/Views/NewsPage.xaml
@@ -60,7 +60,7 @@
                                                                 Padding="5" Margin="0" TextColor="{StaticResource BgTextBlue}" Grid.Row="3" Grid.ColumnSpan="3"/>
                                                         <Label Text="{Binding NewsMore}" FontAttributes="None" FontSize="15" HorizontalTextAlignment="Center" 
                                                                 Padding="0" Margin="0" TextColor="{StaticResource BgTextBlue}" Grid.Row="4" Grid.ColumnSpan="3"/>
-                                                            <Label Text="{Binding Source}" FontAttributes="None" FontSize="14" HorizontalTextAlignment="Center" 
+                                                            <Label Text="{Binding Source}" FontAttributes="Bold" FontSize="14" HorizontalTextAlignment="Center" 
                                                                 Padding="0" Margin="0,10,0,5" TextColor="{StaticResource BgTextBlue}" Grid.Row="5" Grid.ColumnSpan="3"/>
 
                                                             <BoxView HorizontalOptions="FillAndExpand" HeightRequest="0" WidthRequest="1" Color="{StaticResource BgTextBlue}" 
