--- a/WeatherAppXam/WeatherAppXam/Views/HomePage.xaml
+++ b/WeatherAppXam/WeatherAppXam/Views/HomePage.xaml
@@ -6,6 +6,7 @@
              Shell.NavBarIsVisible="False"
              BackgroundColor="{StaticResource BgTextWhite}">
     <ContentPage.Content>
+        <ScrollView>
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="Transparent" Padding="15,13,15,10">
             <Grid>
                 <Image Grid.Column="0" Grid.ColumnSpan="2" Source="icon_notification" HeightRequest="30" WidthRequest="30" HorizontalOptions="End">
@@ -172,5 +173,6 @@
             </Grid>-->
 
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
