--- a/WeatherAppXam/WeatherAppXam/App.xaml
+++ b/WeatherAppXam/WeatherAppXam/App.xaml
@@ -9,12 +9,16 @@
         <ResourceDictionary>
             <Color x:Key="Primary">#2196F3</Color>
             <Color x:Key="BgTextYellow">#F5C945</Color>
+            <Color x:Key="BgTextYellow2">#FFD059</Color>
             <Color x:Key="BgTextBlue">#0F2F44</Color>
             <Color x:Key="BgTextBlueLight">#0E3752</Color>
             <Color x:Key="BgTextBlueDark">#0C2738</Color>
             <Color x:Key="BgTextLightBlue">#EAF1FF</Color>
             <Color x:Key="BgTextWhite">#FFFFFF</Color>
             <Color x:Key="BgTextLightGray">#F7F7F7</Color>
+            <Color x:Key="BgTextDarkGray">#CCCCCC</Color>
+            <Color x:Key="BgTextDeepBlue">#101039</Color>
+            <Color x:Key="BgTextDeepBlueLight">#1A1C49</Color>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
                 <Setter Property="VisualStateManager.VisualStateGroups">
