--- a/WeatherAppXam/WeatherAppXam/AppShell.xaml
+++ b/WeatherAppXam/WeatherAppXam/AppShell.xaml
@@ -20,10 +20,10 @@
                 <Setter Property="Shell.TitleColor" Value="White" />
                 <Setter Property="Shell.DisabledColor" Value="#B4FFFFFF" />
                 <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
-                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource BgTextWhite}" />
-                <Setter Property="Shell.TabBarForegroundColor" Value="{StaticResource BgTextBlue}"/>
-                <Setter Property="Shell.TabBarUnselectedColor" Value="{StaticResource BgTextLightBlue}"/>
-                <Setter Property="Shell.TabBarTitleColor" Value="{StaticResource BgTextBlue}"/>
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource BgTextDeepBlue}" />
+                <Setter Property="Shell.TabBarForegroundColor" Value="{StaticResource BgTextWhite}"/>
+                <Setter Property="Shell.TabBarUnselectedColor" Value="{StaticResource BgTextDarkGray}"/>
+                <Setter Property="Shell.TabBarTitleColor" Value="{StaticResource BgTextWhite}"/>
             </Style>
             <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
             <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
@@ -31,9 +31,11 @@
     </Shell.Resources>
 
     <TabBar>
-        <ShellContent Title="Home" Icon="icon_home.png" Route="HomePage" ContentTemplate="{DataTemplate local:HomePage}" />
-        <ShellContent Title="Search" Icon="icon_search.png" Route="SearchPage" ContentTemplate="{DataTemplate local:SearchPage}" />
-        <ShellContent Title="News" Icon="icon_news.png" Route="NewsPage" ContentTemplate="{DataTemplate local:NewsPage}" />
+        <ShellContent Title="Home" Icon="icon_home.png" Route="HomePage" ContentTemplate="{DataTemplate local:Home2Page}" />
+        <ShellContent Title="Search" Icon="icon_search2.png" Route="SearchPage" ContentTemplate="{DataTemplate local:SearchPage}" />
+        <ShellContent Title="Forecast" Icon="icon_graph.png" Route="ForecastPage" ContentTemplate="{DataTemplate local:ForecastPage}" />
+        <ShellContent Title="Notifications" Icon="icon_notification.png" Route="NewsPage" ContentTemplate="{DataTemplate local:SearchPage}" />
+        <ShellContent Title="News" Icon="icon_news2.png" Route="NewsPage" ContentTemplate="{DataTemplate local:NewsPage}" />
 
         <!--<ShellContent Title="About" Icon="icon_about2.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
         <ShellContent Title="Browse" Icon="icon_feed2.png" ContentTemplate="{DataTemplate local:ItemsPage}" />-->
