--- a/WeatherAppXam/WeatherAppXam/Views/NewsPage.xaml
+++ b/WeatherAppXam/WeatherAppXam/Views/NewsPage.xaml
@@ -8,17 +8,19 @@
             <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource BgTextWhite}" Padding="15,25,15,10">
 
                 <StackLayout Margin="10,0">
-                <Frame Padding="0" BackgroundColor="{StaticResource BgTextWhite}" BorderColor="{StaticResource BgTextBlue}" CornerRadius="10" HasShadow="False">
-                    <StackLayout Padding="10,15,0,15" Orientation="Horizontal">
-                        <!--<Image Source="icon_location" HeightRequest="25" WidthRequest="25" HorizontalOptions="Start" />-->
-                        <Label Text="Recent News" FontSize="15" FontAttributes="Bold" TextColor="{StaticResource BgTextBlue}"
+                    <Frame Padding="0" BackgroundColor="{StaticResource BgTextWhite}" BorderColor="{StaticResource BgTextBlue}" CornerRadius="10" HasShadow="False">
+                        <StackLayout Padding="10,15,0,15" Orientation="Horizontal">
+                            <!--<Image Source="icon_location" HeightRequest="25" WidthRequest="25" HorizontalOptions="Start" />-->
+                            <Label Text="Recent News" FontSize="15" FontAttributes="Bold" TextColor="{StaticResource BgTextBlue}"
                                    HorizontalTextAlignment="Start" VerticalTextAlignment="Center" />
-                    </StackLayout>
-                </Frame>
-            </StackLayout>
-                <!--<Label Text="News" FontSize="17" FontAttributes="Bold" TextColor="{StaticResource BgTextBlue}" Margin="5,0,0,0"
-                       HorizontalTextAlignment="Start"/>-->
-                <Grid Margin="0,30,0,30">
+                        </StackLayout>
+                    </Frame>
+                </StackLayout>
+                
+                <ActivityIndicator VerticalOptions="Center" HorizontalOptions="Center" IsVisible="{Binding IndicatorVisibility}" IsRunning="{Binding IsLoading}" 
+                                       HeightRequest="40" Grid.Row="4" Grid.Column="4" Color="{StaticResource BgTextDeepBlue}" Margin="0,5,0,0" />
+                
+                <Grid Margin="0,15 ,0,30">
 
                     <Frame Padding="0" BackgroundColor="Transparent" BorderColor="Transparent" CornerRadius="10" HasShadow="False">
                         <StackLayout>
@@ -32,43 +34,56 @@
                                         <CollectionView.ItemTemplate>
                                             <DataTemplate>
                                                 <StackLayout Margin="0,10,0,20" BackgroundColor="Transparent">
-                                                    <Frame CornerRadius="5" BackgroundColor="{StaticResource BgTextWhite}" Padding="5" Margin="0"  HasShadow="False">
-                                                    
-                                                    <Grid Padding="3"  VerticalOptions="Start" ColumnSpacing="0" RowSpacing="0">
-                                                        <Grid.RowDefinitions>
-                                                            <RowDefinition Height="auto" />
-                                                            <RowDefinition Height="auto" />
-                                                            <RowDefinition Height="auto" />
-                                                            <RowDefinition Height="auto" />
-                                                            <RowDefinition Height="auto" />
-                                                            <RowDefinition Height="auto" />
-                                                        </Grid.RowDefinitions>
-                                                        <Grid.ColumnDefinitions>
-                                                            <ColumnDefinition Width="*" />
-                                                            <ColumnDefinition Width="*" />
-                                                            <ColumnDefinition Width="*" />
-                                                        </Grid.ColumnDefinitions>
-                                                        <Frame CornerRadius="5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,0" Padding="0" HasShadow="False">
-                                                            <Image Source="{Binding NewsImage}" HorizontalOptions="StartAndExpand" 
-                                                                    />
-                                                        </Frame>
-                                                        <!--<Image Source="{Binding NewsImage}" HorizontalOptions="StartAndExpand" 
-                                                                   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,0" />-->
-                                                        <Label Text="{Binding NewsTitle}" FontAttributes="Bold" FontSize="18" HorizontalTextAlignment="Center" 
-                                                                Padding="5" Margin="0" TextColor="{StaticResource BgTextBlue}" Grid.Row="2" Grid.ColumnSpan="3" />
-                                                        <Label Text="{Binding NewsDescription}" FontAttributes="None" FontSize="16" HorizontalTextAlignment="Center" 
-                                                                Padding="5" Margin="0" TextColor="{StaticResource BgTextBlue}" Grid.Row="3" Grid.ColumnSpan="3"/>
-                                                        <Label Text="{Binding NewsMore}" FontAttributes="None" FontSize="15" HorizontalTextAlignment="Center" 
-                                                                Padding="0" Margin="0" TextColor="{StaticResource BgTextBlue}" Grid.Row="4" Grid.ColumnSpan="3"/>
-                                                            <Label Text="{Binding Source}" FontAttributes="Bold" FontSize="14" HorizontalTextAlignment="Center" 
-                                                                Padding="0" Margin="0,10,0,5" TextColor="{StaticResource BgTextBlue}" Grid.Row="5" Grid.ColumnSpan="3"/>
+                                                    <Frame CornerRadius="5" BackgroundColor="{StaticResource BgTextWhite}" Padding="5" Margin="0"  HasShadow="True">
 
-                                                            <BoxView HorizontalOptions="FillAndExpand" HeightRequest="0" WidthRequest="1" Color="{StaticResource BgTextBlue}" 
+                                                        <Grid Padding="3"  VerticalOptions="Start" ColumnSpacing="0" RowSpacing="0">
+                                                            <Grid.RowDefinitions>
+                                                                <RowDefinition Height="auto" />
+                                                                <RowDefinition Height="auto" />
+                                                                <RowDefinition Height="auto" />
+                                                                <RowDefinition Height="auto" />
+                                                                <RowDefinition Height="auto" />
+                                                                <RowDefinition Height="auto" />
+                                                            </Grid.RowDefinitions>
+                                                            <Grid.ColumnDefinitions>
+                                                                <ColumnDefinition Width="*" />
+                                                                <ColumnDefinition Width="*" />
+                                                                <ColumnDefinition Width="*" />
+                                                            </Grid.ColumnDefinitions>
+
+                                                            <Grid.GestureRecognizers>
+                                                                <TapGestureRecognizer x:Name="NewsItem" Tapped="NewsItem_Tapped" CommandParameter="{Binding Url}" />
+                                                            </Grid.GestureRecognizers>
+
+                                                            <Frame CornerRadius="5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,0" Padding="0" HasShadow="False">
+                                                                <Image Source="{Binding NewsImage}" HorizontalOptions="StartAndExpand" 
+                                                                    />
+                                                            </Frame>
+                                                            <!--<Image Source="{Binding NewsImage}" HorizontalOptions="StartAndExpand" 
+                                                                   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,0" />-->
+                                                            <Label Text="{Binding NewsTitle}" FontAttributes="Bold" FontSize="18" HorizontalTextAlignment="Start" 
+                                                                Padding="5" Margin="0" TextColor="{StaticResource BgTextDeepBlue}" Grid.Row="2" Grid.ColumnSpan="3" />
+                                                            <!--<Label Text="{Binding NewsDescription}" FontAttributes="None" FontSize="16" HorizontalTextAlignment="Center" 
+                                                                Padding="5" Margin="0" TextColor="{StaticResource BgTextDeepBlue}" Grid.Row="3" Grid.ColumnSpan="3"/>-->
+                                                            <Label Text="{Binding Url}" FontAttributes="None" FontSize="15" HorizontalTextAlignment="Center" IsVisible="False"
+                                                                Padding="0" Margin="0" TextColor="{StaticResource BgTextDeepBlue}" Grid.Row="4" Grid.ColumnSpan="3"/>
+                                                            
+                                                            <StackLayout Grid.ColumnSpan="3" Grid.Row="5" BackgroundColor="Transparent" Orientation="Horizontal" Margin="0,10,0,0" >
+                                                                
+                                                                <Label Text="{Binding Source}" FontSize="14" FontAttributes="None" HorizontalTextAlignment="End"
+                                           TextColor="{StaticResource BgTextBlueDark}" VerticalTextAlignment="Center" Grid.Column="0" Grid.ColumnSpan="2" BackgroundColor="Transparent"/>
+
+                                                                <Image Source="icon_copy2" WidthRequest="22" HeightRequest="22" Grid.Column="2" IsVisible="False"
+                                                                       BackgroundColor="Transparent" VerticalOptions="Center" HorizontalOptions="EndAndExpand" />
+                                                                    
+                                                            </StackLayout>
+
+                                                            <BoxView HorizontalOptions="Center" HeightRequest="0" WidthRequest="1" Color="{StaticResource BgTextBlue}" 
                                                             Grid.Row="6" Grid.ColumnSpan="3" Margin="0,20,0,10"/>
-                                                    </Grid>
-                                                   
-                                                </Frame>
- </StackLayout>
+                                                        </Grid>
+
+                                                    </Frame>
+                                                </StackLayout>
                                             </DataTemplate>
                                         </CollectionView.ItemTemplate>
                                     </CollectionView>
