--- a/WeatherAppXam/WeatherAppXam/Views/ForecastPage.xaml
+++ b/WeatherAppXam/WeatherAppXam/Views/ForecastPage.xaml
@@ -1,17 +1,135 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WeatherAppXam.Views.ForecastPage">
+             x:Class="WeatherAppXam.Views.ForecastPage"
+             BackgroundColor="{StaticResource BgTextDeepBlue}">
     <ContentPage.Content>
-        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource BgTextDeepBlue}" Padding="15,30,15,10">
+        <StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource BgTextDeepBlue}" Padding="15,13,15,10">
+            
+
+            <StackLayout Margin="3,0" IsVisible="{Binding SearcStackVisible}" VerticalOptions="Start">
+                <Frame Padding="0" Margin="0" BackgroundColor="{StaticResource BgTextDeepBlueLight}" CornerRadius="10" HasShadow="False">
+                    <StackLayout>
+                        <Grid Padding="0,1,0,5">
+                            <!--<Image Source="icon_location" HeightRequest="25" WidthRequest="25" HorizontalOptions="Start" />-->
+                            <!--<Label Text="Recent News" FontSize="15" FontAttributes="Bold" TextColor="{StaticResource BgTextBlue}"
+                                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center" />-->
+
+                            <SearchBar Grid.Column="0" BackgroundColor="Transparent" Placeholder="Enter city..." x:Name="searchBar"
+                                       SearchCommand="{Binding PerformSearch}" SearchCommandParameter="{Binding Text, Source={x:Reference searchBar}}"
+                                       FontSize="Medium" TextColor="{StaticResource BgTextDarkGray}" PlaceholderColor="{StaticResource BgTextDarkGray}"/>
+                        </Grid>
+
+                        <!--<Grid Padding="15,0">
+                            <RadioButton Content="Weather" FontSize="Small" Grid.Column="0" IsChecked="{Binding RadioWeatherChecked}" 
+                                         TextColor="{StaticResource BgTextDeepBlue}" />
+                            <RadioButton Content="News" FontSize="Small" Grid.Column="1" IsChecked="{Binding RadioNewsChecked}" 
+                                         TextColor="{StaticResource BgTextDeepBlue}" />
+
+                        </Grid>-->
+                    </StackLayout>
+                </Frame>
+            </StackLayout>
+
             <ActivityIndicator VerticalOptions="Center" HorizontalOptions="Center" IsVisible="{Binding IndicatorVisibility}" IsRunning="{Binding IsLoading}" 
                                        HeightRequest="40" Grid.Row="4" Grid.Column="4" Color="{StaticResource BgTextYellow2}" Margin="0,5,0,0" />
 
-            <Label Text="8-Days Forecast" FontAttributes="Bold" FontSize="20" Padding="5,0,0,0" TextColor="{StaticResource BgTextYellow2}" />
-            
-            <Grid Margin="0,7,0,10" Padding="2,0,2,2">
+            <Grid Margin="0,10,0,10" IsVisible="false">
+                <Frame Padding="0" BackgroundColor="{StaticResource BgTextDeepBlueLight}" CornerRadius="10">
 
-                <Frame Padding="0" BackgroundColor="Transparent" CornerRadius="10" HasShadow="True">
+                    <StackLayout Margin="0,2,0,2">
+                        <!--LOCATION-->
+                        <StackLayout Padding="10,7,0,7" Orientation="Horizontal">
+                            <Image Source="icon_location2" HeightRequest="25" WidthRequest="25" HorizontalOptions="Start" />
+                            <Label x:Name="lbLocation" Text="{Binding CurrentLocation}" FontSize="15" TextColor="{StaticResource BgTextWhite}"
+                                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center" FontAttributes="None"/>
+                        </StackLayout>
+
+                        <!--TEMP-->
+                        <StackLayout BackgroundColor="Transparent" Margin="2,0,2,0">
+                            <StackLayout Grid.Row="1">
+
+                                <Grid>
+                                    <StackLayout Grid.Column="0" Grid.ColumnSpan="2" BackgroundColor="Transparent">
+
+                                        <Image Source="{Binding CurrentTempIcon}" HeightRequest="140" WidthRequest="120" VerticalOptions="Center" />
+
+                                    </StackLayout>
+                                    <StackLayout Grid.Column="2" Grid.ColumnSpan="2" BackgroundColor="Transparent" Orientation="Horizontal" HorizontalOptions="Center" >
+                                        <Label Text="{Binding CurrentTempC}" FontSize="68" FontAttributes="Bold" HorizontalTextAlignment="Start" HorizontalOptions="End"
+                                           TextColor="{StaticResource BgTextLightGray}" VerticalTextAlignment="Center" />
+                                        <Label Text="{Binding TempMetric}" FontSize="38" FontAttributes="None" HorizontalTextAlignment="Start" HorizontalOptions="End" Margin="0,4,0,0"
+                                           TextColor="{StaticResource BgTextLightGray}" VerticalTextAlignment="Center" />
+                                    </StackLayout>
+                                </Grid>
+                            </StackLayout>
+                        </StackLayout>
+
+                        <!--DESCRIPTION-->
+                        <StackLayout BackgroundColor="Transparent" Grid.Row="3" Grid.ColumnSpan="2" Padding="5,5,5,5">
+                            <Label x:Name="lbCondition" Text="{Binding CurrentDescription}" FontSize="16" TextColor="{StaticResource BgTextLightGray}"
+                                   HorizontalTextAlignment="End" VerticalTextAlignment="Center"/>
+                        </StackLayout>
+
+
+                        <!--HOURLY-->
+                        <Frame Padding="0" BackgroundColor="Transparent" CornerRadius="10">
+                            <StackLayout HeightRequest="100" Padding="2" BackgroundColor="Transparent">
+                                <Frame CornerRadius="10" Padding="2" Margin="0" BackgroundColor="Transparent" HasShadow="False">
+                                    <CollectionView ItemsSource="{Binding HourlySource}">
+                                        <CollectionView.ItemsLayout>
+                                            <LinearItemsLayout Orientation="Horizontal" ItemSpacing="5" />
+                                        </CollectionView.ItemsLayout>
+                                        <CollectionView.ItemTemplate>
+                                            <DataTemplate>
+                                                <Frame CornerRadius="5" Padding="5" Margin="0" BackgroundColor="Transparent" HasShadow="False" >
+                                                    <Grid Padding="0" BackgroundColor="Transparent" VerticalOptions="Fill" ColumnSpacing="0" RowSpacing="0">
+                                                        <Grid.RowDefinitions>
+                                                            <RowDefinition Height="auto" />
+                                                        </Grid.RowDefinitions>
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="auto" />
+                                                        </Grid.ColumnDefinitions>
+
+                                                        <StackLayout Padding="5,0,5,10" Margin="0" Spacing="0" VerticalOptions="Center" BackgroundColor="Transparent">
+
+                                                            <!--<StackLayout.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" CommandParameter="{Binding Time}" />
+                                            </StackLayout.GestureRecognizers>-->
+
+
+                                                            <Image  Source="{Binding Image}" HeightRequest="30" WidthRequest="30" Margin="0,0,0,0" />
+
+                                                            <Label Text="{Binding Temp}" FontAttributes="Italic" FontSize="Small" HorizontalTextAlignment="Center" 
+                                               Padding="1" TextColor="{StaticResource BgTextLightGray}" Margin="0" />
+
+                                                            <Label Text="{Binding Time}" FontAttributes="None" FontSize="Small" HorizontalTextAlignment="Center" 
+                                               Padding="2" Margin="0,0,2,0" TextColor="{StaticResource BgTextLightGray}" />
+                                                            <!--<Label Text="{Binding FahrenheitTemp}" FontAttributes="Italic" FontSize="Medium" HorizontalTextAlignment="Center"
+                                               Padding="1" TextColor="White" />-->
+                                                        </StackLayout>
+
+                                                    </Grid>
+                                                </Frame>
+                                            </DataTemplate>
+                                        </CollectionView.ItemTemplate>
+                                    </CollectionView>
+                                </Frame>
+                            </StackLayout>
+                        </Frame>
+
+
+
+                    </StackLayout>
+                </Frame>
+            </Grid>
+
+
+            <!--<Label Text="8-Days Forecast" FontAttributes="Bold" FontSize="20" Padding="5,0,0,0" TextColor="{StaticResource BgTextYellow2}" />-->
+
+            <Grid Margin="0,7,0,10" Padding="2,0,2,2" HeightRequest="200" IsVisible="false">
+
+                <Frame Padding="0" BackgroundColor="{StaticResource BgTextDeepBlueLight}" CornerRadius="10" HasShadow="True">
                     <StackLayout Margin="2,12,2,5">
                         <StackLayout Padding="9,0,5,0" Margin="0,0,0,0">
                             <CollectionView ItemsSource="{Binding SevenDaysSource}">
@@ -37,11 +155,11 @@
 
                                                 <StackLayout Grid.Column="0" Grid.ColumnSpan="2">
                                                     <Label Text="{Binding Day}" FontAttributes="None" FontSize="17" HorizontalTextAlignment="Start" 
-                                                   Padding="0" Margin="0,7,0,0" TextColor="{StaticResource BgTextWhite}"  VerticalTextAlignment="Center" />
+                                                   Padding="0" Margin="0,7,0,0" TextColor="{StaticResource BgTextLightGray}"  VerticalTextAlignment="Center" />
                                                     <Label Text="{Binding Date}" FontAttributes="None" FontSize="14" HorizontalTextAlignment="Start" 
-                                                   Padding="0" Margin="0" TextColor="{StaticResource BgTextWhite}"  VerticalTextAlignment="Center" />
+                                                   Padding="0" Margin="0" TextColor="{StaticResource BgTextLightGray}"  VerticalTextAlignment="Center" />
                                                 </StackLayout>
-                                                
+
                                                 <Image  Source="{Binding Image}" HeightRequest="50" WidthRequest="40" Margin="0,1,2,0" Grid.Column="2"
                                                         VerticalOptions="Center" HorizontalOptions="End"/>
 
@@ -70,6 +188,7 @@
                     </StackLayout>
                 </Frame>
             </Grid>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
